@@ -495,6 +495,7 @@ GtkWidget *gui_create_bible_pane(void)
 				       GTK_POLICY_AUTOMATIC);
 	gtk_scrolled_window_set_shadow_type((GtkScrolledWindow *)scrolledwindow,
                                              settings.shadow_type);
+	
 	widgets.html_text = gtk_html_new();
 	gtk_widget_show(widgets.html_text);
 	gtk_container_add(GTK_CONTAINER(scrolledwindow),
